<resources>
    <string name="app_name">HiLo</string>
    <string name="action_about">About</string>
    <string name="author">Alison Kapcala (kapc0003)</string>
    <string name="image">A thinking face</string>
    <string name="game_text">Guess a number between 1—1000</string>
    <string name="user_guess">1</string>
    <string name="guess_button">Guess</string>
    <string name="reset_button">Reset</string>
</resources>
